Criação da classe model Usuario e sua controller e datamodel. Criação da Activity NovaConta; Implementação do código de cadastro do usuario no banco de dados local SQLite; Implementação do código de buscar por email do usuario no banco de dados local SQLite; Recriação das tabelas com nova estrutura;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:name=".view.navigation"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".view.Login"></activity>
+        <activity android:name=".view.Login" />
+        <activity android:name=".view.NovaConta"></activity>
     </application>
 
 </manifest>
