--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.lpa.carteiradigitalfaci_pt">
 
     <application
+        android:name=".view.CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,7 +22,8 @@
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".view.Login" />
-        <activity android:name=".view.NovaConta"></activity>
+        <activity android:name=".view.NovaConta" />
+        <activity android:name=".view.ConfigActivity"></activity>
     </application>
 
 </manifest>
