Foram implentados métodos de inserção, atualização e deleção dos documentos. Método de verificação no banco para saber se possui documento. Recuperação dos dados do CPF. Implementação de PIN como segundo meio de segurança, método "verificarSePossuiPIN()" e AlertDialog para inserção. Tabela CNH recebeu a coluna "observacao_cnh" Fragment CPF recebeu ajustes e os EditTexts com máscara, além dos botões "Editar" e "Excluir", que já estão funcionando. Ajustada a orientação da tela, não sendo possível rotacionar a fim de não distorcer o Layout. Foi adicionado ao AndroidMaifest a configuração para não distorção do layout ao exibir teclado virtual. Criada classe de Criptografia Base64 Criada nova fragment para cadastro, a partir de então será feita uma fragment de cadastro e outra de exibição Foi criado o shape personalizado para os botões de Edição e Exclusão

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity
             android:name=".view.navigation"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".view.Login" />
         <activity android:name=".view.NovaConta" />
         <activity android:name=".view.ConfigActivity"></activity>
