--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,10 @@
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".view.Login" />
-        <activity android:name=".view.NovaConta" />
+        <activity android:name=".view.Login"
+            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".view.NovaConta"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".view.ConfigActivity"></activity>
     </application>
 
