Ajustes no Banco de dados, inclusão e remoção de algumas colunas e ajuste cascáta nas classes Model Criação de todas as telas de cadastro do Sistema e suas respectivas classes. Função de Onclick dos Botões do Menu principal Completa. Ajuste de Scroll nas Activityes para comodidade do usuário ao digitar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,9 @@
         <activity
             android:name=".view.navigation"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".view.Login"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".view.NovaConta"
-            android:windowSoftInputMode="adjustPan"/>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".view.Login"/>
+        <activity android:name=".view.NovaConta"/>
         <activity android:name=".view.ConfigActivity"></activity>
     </application>
 
